--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+		"php": ">=5.3.0"
+	},
+	"autoload": {
+        "psr-4": {
+            "Clapp\\ApiResponse\\": "src/Clapp/ApiResponse"
+        }
+    },
 }
