--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "clapp/apiresponse",
+    "version": "0.1.0",
     "description": "Clapp ApiResponse",
     "authors": [
         {
@@ -7,7 +8,6 @@
             "email": "gergely.sarosi@clapp.eu"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
 		"php": ">=5.3.0"
 	},
